--- a/highlands.html
+++ b/highlands.html
@@ -62,6 +62,9 @@
                         <li>
                           <a href="#friendOfTheEarth">Friend of the Earth</a>
                         </li>
+                        <li>
+                          <a href="#treasures">Treasures</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -122,6 +125,7 @@
                              <li><a class="head" href="#hauntedHouse">Haunted House</a></li>
                              <li><a class="head" href="#sweetRelief">Sweet Relief</a></li>
                              <li><a class="head" href="#friendOfTheEarth">Friend of the Earth</a></li>
+                             <li><a class="head" href="#treasures">Treasures</a></li>
                           </ul>
                           <!-- menu-submenu accordon-content-->
                                <li id="nav4" class="toggle accordion-toggle"> 
@@ -821,7 +825,90 @@
                 </div>
               </div>
               <!-- End of Friend of the Earth -->
+              <div class="line"></div>              
+              <!-- Start of Treasures -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="treasures" class="anchor text-center">Treasures</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Dawat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Hapuna
+                          </td>
 
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Treasures_Hapunas_Treasure.png" alt="Hapunas Treasure" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Treasures_Hapunas_Treasure_Stats.png' alt='Hapunas Treasure Stats'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Treasures_Hapuna.png" alt="Hapuna">
+                        <span class="light-red">Hapuna:</span> I lost favorite pendant when I tried to cimb scary tree. Ghost thing scare me away and now pendant lost. Go to ghost forest. It north of here. Bring back my treasure...
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Treasures</span><span class="orange">, Find Hapuna's Pendant, lost in a haunted forest north of Dawat.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Ghost_Willow.png" alt="Ghost Willow" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Ghost_Willow_Stats.png' alt='Ghost Willow Stats'>">
+                      <br>
+                     Head north to find the <span class="red">Ghost Willow</span>.  
+                     You will be updated as you kill them <span class="light-blue">You search for Hapuna's treasure, but don't find anything...</span>
+                     When you have found the pendant you will be updated to return to Hapuna.
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Treasures</span><span class="orange">, You have found Hapuna's treasure! Return it to her in Dawat.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Hapuna:</span> Thank you! This is my favorite jewel piece! Wait! This pendant all fouled up. Me not want it anymore... You take it and stay away from climbing trees!
+                      <br>
+                    </p>
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Hapuna's Treasure</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">71,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>  
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       Hapuna gave you her treasure.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Haunted House -->
 
              
          
