Added Arda to the Highlands page

--- a/highlands.html
+++ b/highlands.html
@@ -179,7 +179,7 @@
                   <div class="card-body img-card-body">
                     <div>
                       <h2 id="dawat" class="anchor text-center">Dawat</h2>
-                      <p class="text-center">City Faction Bonus: +3% Poison, +5 Strength</p>
+                      <p class="text-center">City Faction Bonus: +2% Poison, +3 Strength</p>
                     </div>
                     <div class="flex-center">
                       <div>
@@ -1011,6 +1011,119 @@
                 </div>
               </div>
               <!-- End of Invasion -->
+              <!-- Arda Location Shop Owners and Quest -->
+              <div class="card bg-main half-width mb-5">
+                <div>
+                  <div class="card-body img-card-body">
+                    <div>
+                      <h2 id="dawat" class="anchor text-center">Arda</h2>
+                      <p class="text-center">City Faction Bonus: +6% Blunt , +5 Strength </p>
+                    </div>
+                    <div class="flex-center">
+                      <div>
+                        <img class="npc-img img-map-height" src="Images/Maps/Arda.png" alt="Arda Map">                        
+                      </div>
+                    </div>
+                  </div>                  
+                </div>
+                  <hr>  
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Arda Shop Owners</h2>
+                  </div>           
+                <div class="flex-wrapper">
+                  <div>
+                    <p><span class="num-color-teal">Pub</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Grimlock.png" alt="Grimlock">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Farming Shop</span> </p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Sevyd.png" alt="Sevyd">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Weaponry Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Kedalel.png" alt="Kedalel">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Weaponry Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Adie.png" alt="Adie">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Leatherworking Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Mo.png" alt="Mo">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Carpenter Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Delawyth.png" alt="Delawyth">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Armory</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Edelassa.png" alt="Edelassa">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">BlackSmith</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Edelbram.png" alt="Edelbram">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Provisioner Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Lothath.png" alt="Lothath">  
+                  </div>
+                  <div>
+                    <p><span class="num-color-teal">Magic Shop</span></p>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Janus_Laruis.png" alt="Janus Laruis">  
+                  </div>             
+                </div> 
+                <hr>  
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Arda Town People</h2>
+                  </div>           
+                <div class="flex-wrapper">
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Darius_Kyle.png" alt="Darius Kyle">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/npc/Town/Arda_Arvanion.png" alt="Arvanion">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Arda_Asicrel.png" alt="Asicrel">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Guard.png" alt="Guard">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Elite_Guard.png" alt="Elite Guard">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Town_Wizard_Of_Insight.png" alt="Town Wizard of Insight">  
+                  </div>
+                  <div>
+                    <img class="npc-img" src="Images/NPC/Town/Town_Guardian.png" alt="Town Guardian">  
+                  </div>             
+                </div>
+                  <hr>
+                  <div>
+                    <h2 id="questNpcs" class="anchor text-center">Arda Quest NPCs</h2>
+                  </div>           
+                <div class="flex-wrapper">
+                  <div>
+                    <p><a href="#heroOfDawat"><span class="num-color-teal">1.</span> Bucky Brown</a></p>
+                    <img class="npc-img" src="Images/HighLands/Hooky_Bucky_Brown.png" alt="Bucky Brown">  
+                  </div>
+                  <div>
+                    <p><a href="#hauntedHouse"><span class="num-color-teal">2.</span> Jenn Talbot</a></p>
+                    <img class="npc-img" src="Images/HighLands/Shovel_Trouble_Jenn_Talbot.png" alt="Jenn Talbot">  
+                  </div>
+                  <div>
+                    <p><a href="#sweetRelief"><span class="num-color-teal">3.</span> Zack Juiluin</a></p>
+                    <img class="npc-img" src="Images/HighLands/Struggling_Zack_Juiluin.png" alt="Zack Juiluin">  
+                  </div>
+                  <div>
+                    <p><a href="#friendOfTheEarth"><span class="num-color-teal">4.</span> Russel Pikeman</a></p>
+                    <img class="npc-img" src="Images/HighLands/Valekars_Fortress_Russel_Pikeman.png" alt="Russel Pikeman">  
+                  </div>
+                </div> 
+                <hr>
+             </div>
+              <!-- End of Dawat Map and NPCs -->
 
              
          
