Completed Shovel Trouble

--- a/highlands.html
+++ b/highlands.html
@@ -74,16 +74,25 @@
                   <a href="#ardaSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Arda</a>
                   <ul class="collapse list-unstyled" id="ardaSubmenu">
                     <li>
-                      <a href="#">a</a>
-                  </li>
-                  <li>
-                    <a href="#">b</a>
-                </li>
+                      <a href="#arda">Arda</a>
+                    </li>
+                    <li>
+                      <a href="#shovelTrouble">Shovel Trouble</a>
+                    </li>
+                    <li>
+                      <a href="#hooky">Hooky</a>
+                    </li>
+                    <li>
+                      <a href="#struggling">Struggling</a>
+                    </li>
+                    <li>
+                      <a href="#valekarsFortress">Valekar's Fortress</a>
+                    </li>
                   </ul>
                 </li>
                 <li>
                   <a href="#parianSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Parian</a>
-                  <ul class="collapse list-unstyled" id="samadSubmenu">
+                  <ul class="collapse list-unstyled" id="parianSubmenu">
                       <li>
                           <a href="#">A</a>
                       </li>
@@ -138,7 +147,11 @@
                           </li>
                           <!-- accordion-toggle -->
                           <ul class="menu-submenu accordion-content">
-                             <li><a class="head" href="#">A</a></li>
+                             <li><a class="head" href="#arda">Arda</a></li>
+                             <li><a class="head" href="#hooky">Hooky</a></li>
+                             <li><a class="head" href="#shovelTrouble">Shovel Trouble</a></li>
+                             <li><a class="head" href="#struggling">Struggling</a></li>
+                             <li><a class="head" href="#valekarsFortress">Valekar's Fortress</a></li>
                           </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav6" class="toggle accordion-toggle"> 
@@ -1016,7 +1029,7 @@
                 <div>
                   <div class="card-body img-card-body">
                     <div>
-                      <h2 id="dawat" class="anchor text-center">Arda</h2>
+                      <h2 id="arda" class="anchor text-center">Arda</h2>
                       <p class="text-center">City Faction Bonus: +6% Blunt , +5 Strength </p>
                     </div>
                     <div class="flex-center">
@@ -1105,12 +1118,12 @@
                   </div>           
                 <div class="flex-wrapper">
                   <div>
-                    <p><a href="#heroOfDawat"><span class="num-color-teal">1.</span> Bucky Brown</a></p>
-                    <img class="npc-img" src="Images/HighLands/Hooky_Bucky_Brown.png" alt="Bucky Brown">  
+                    <p><a href="#heroOfDawat"><span class="num-color-teal">1.</span> Jenn Talbot</a></p>
+                    <img class="npc-img" src="Images/HighLands/Shovel_Trouble_Jenn_Talbot.png" alt="Jenn Talbot">  
                   </div>
                   <div>
-                    <p><a href="#hauntedHouse"><span class="num-color-teal">2.</span> Jenn Talbot</a></p>
-                    <img class="npc-img" src="Images/HighLands/Shovel_Trouble_Jenn_Talbot.png" alt="Jenn Talbot">  
+                    <p><a href="#hauntedHouse"><span class="num-color-teal">2.</span> Bucky Brown</a></p>
+                    <img class="npc-img" src="Images/HighLands/Hooky_Bucky_Brown.png" alt="Bucky Brown">  
                   </div>
                   <div>
                     <p><a href="#sweetRelief"><span class="num-color-teal">3.</span> Zack Juiluin</a></p>
@@ -1124,6 +1137,102 @@
                 <hr>
              </div>
               <!-- End of Dawat Map and NPCs -->
+              <!-- Start of Shovel Trouble -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="shovelTrouble" class="anchor text-center">Shovel Trouble</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Dawat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Jenn Talbot
+                          </td>
+
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Shovel_Trouble_Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Shovel_Trouble_Gold_10000.png' alt='Gold 10000'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Shovel_Trouble_Jenn_Talbot.png" alt="Jenn Talbot">
+                        <span class="light-red">Jenn Talbot:</span> Hello there... You look like you will do... Some Hobgoblins recently ransacked the town and stole away my favorite shovel. What thye want with it I'll never understand. Do they even farm? Have they a concept for the need to plan ahead?
+                        Surely it can't be to dig a latrine. The smell they left behind on everything was unholy. I really do wonder what purpose it serves to them.
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Most likely they thought it a weapon.</span> 
+                        <br>
+                        <span class="light-red">Jenn Talbot:</span> Now there's an idea! I can tell you are an experienced warrior. Say...why don't you find the Hobgoblin camp to the northwest and return my tool... Don't come back til you've found it!
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Shovel Trouble</span><span class="orange">, Recover Jenn's shovel from the hobgoblins Northwest of Arda.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Hobgoblin.png" alt="Hobgoblin" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Hobgoblin_Stats.png' alt='Hobgoblin Stats'>">
+                      <img src="Images/HighLands/Shovel_Trouble_Hobgoblin_Location.png" alt="Hobogoblin Location Map" height="300px" width="300px">
+                      <br>
+                     Head northwest to find the <span class="red">Hobgoblins</span>. You will need to kill them with in the location to find the shovel. 
+                     You will be updated as you kill them; <span class="light-blue">You don't find anything!</span>
+                     When you have found the shovel. <img class="thumbnail-img" src="Images/HighLands/Shovel_Trouble_Jenn_Talbots_Shovel.png" alt="Jenn Talbots Shovel" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Shovel_Trouble_Jenn_Talbots_Shovel_Stats.png' alt='Jenn Talbots Shovel'>">
+                     You will be updated to return to Jenn.
+                     <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Jenn Talbot's Shovel!</span></li>                        
+                      </ul>
+                      <hr> 
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Shovel Trouble</span><span class="orange">, You recovered Jenn's shovel from the hobgoblins. Return to Arda!</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Jenn Talbot:</span> You have found my shovel? Thank you so much! Here... this should cover you expenses. <span class="orange">*She tosses some coins at you.*</span> Now I can continue farming. Thank you. Why are you puzzled that I pay such a high price for my shovel?
+                      It is enchanted! I am using it to grow crops for the fair. If that sweet talking Arvanion manages to weasel his way into first place, I won't hear the end of it through the dreadful long winter.
+                      <br>
+                    </p>
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">GOLD RECEIVED: 10,000 </span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">81,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>  
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       Jenn paid you quite well for returning her shovel.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Shovel Trouble -->
               
 
              
