Completed Quest Hooky

--- a/highlands.html
+++ b/highlands.html
@@ -1024,6 +1024,7 @@
                 </div>
               </div>
               <!-- End of Invasion -->
+              <div class="line"></div>   
               <!-- Arda Location Shop Owners and Quest -->
               <div class="card bg-main half-width mb-5">
                 <div>
@@ -1137,6 +1138,7 @@
                 <hr>
              </div>
               <!-- End of Dawat Map and NPCs -->
+              <div class="line"></div>   
               <!-- Start of Shovel Trouble -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
@@ -1233,6 +1235,95 @@
                 </div>
               </div>
               <!-- End of Shovel Trouble -->
+              <div class="line"></div>   
+              <!-- Start of Hooky -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="hooky" class="anchor text-center">Hooky</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Dawat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Bucky Brown
+                          </td>
+
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Hooky_Helm_of_Strength.png" alt="Helm of Strength" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Hooky_Helm_of_Strength_Stats.png' alt='Helm of Strength Stats'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Hooky_Bucky_Brown.png" alt="Bucky Brown">
+                        <span class="light-red">Bucky Brown:</span>Oh hello! I need your help... My mother has me working these fields tending to the crops. It's os boring. I think she wanted me out of her hair, so she thought of some busy work.
+                        If you could clear out some of the Ogres at the Arda pond I could ditch here and go fishing!
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Yes, it would be no trouble.</span> 
+                        <br>
+                        <span class="light-red">Bucky Brown:</span> Wahoo! Thanks a bunch! 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Hooky</span><span class="orange">, Kill 100 Ogres northeast of Arda, at the pond, for Bucky Brown.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Ogre.png" alt="Ogre" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Ogre_Stats.png' alt='Ogre Stats'>">
+                      <img src="Images/HighLands/Hooky_Arda_Pond.png" alt="Arda Pond Map" height="300px" width="300px">
+                      <br>
+                     Head northeast to Arda pond to find the <span class="red">Ogres</span>. You will need to kill them with in the location to find the count as kill for Bucky Brown. 
+                     You will be updated as you kill them; <span class="green">You have killed 100 Ogres for Buck Brown.</span> When you have killed all 100 you will be updated to return to Bucky Brown.                     
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Hooky</span><span class="orange">, Return to Bucky Brown in Arda.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Bucky Brown:</span> You killed all those Ogres at the Arda Pond? My lucky day! Wait..maybe you can use this. My big brother forgot to pack it when he left.  
+                      <br>
+                    </p>
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Helm of Strength </span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">41,625</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>  
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You helped Bucky Brown buck his chores and got his brother's Helm of Strength.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Hooky -->
               
 
               
