Completed Quest Struggling

--- a/highlands.html
+++ b/highlands.html
@@ -1300,7 +1300,7 @@
                       <img class="monster-img" src="Images/NPC/Monsters/Ogre.png" alt="Ogre" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Ogre_Stats.png' alt='Ogre Stats'>">
                       <img src="Images/HighLands/Hooky_Arda_Pond.png" alt="Arda Pond Map" height="300px" width="300px">
                       <br>
-                     Head northeast to Arda pond to find the <span class="red">Ogres</span>. You will need to kill them with in the location to find the count as kill for Bucky Brown. 
+                     Head northeast to Arda pond to find the <span class="red">Ogres</span>. You will need to kill them with in the location to count as a kill for Bucky Brown. 
                      You will be updated as you kill them; <span class="green">You have killed 100 Ogres for Buck Brown.</span> When you have killed all 100 you will be updated to return to Bucky Brown.                     
                      <br>                                           
                      <span class="green">QUEST UPDATE:</span><span class="red"> Hooky</span><span class="orange">, Return to Bucky Brown in Arda.</span>
@@ -1324,6 +1324,95 @@
                 </div>
               </div>
               <!-- End of Hooky -->
+              <div class="line"></div>   
+              <!-- Start of Struggling -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="struggling" class="anchor text-center">Struggling</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Dawat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Adept</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Zack Juiluin
+                          </td>
+
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/" alt="Helm of Strength" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Hooky_Helm_of_Strength_Stats.png' alt='Helm of Strength Stats'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Struggling_Zack_Juiluin.png" alt="Zack Juiluin">
+                        <span class="light-red">Zack Juiluin:</span> Hail, adventurer! I am a struggling miner, and I need your help! There seems to be a high increase of Golems to the east along the mountainside I can't work with those Golems nearby,
+                        so I am forced to sit here on the street and beg for my bread. If someone was brave enough to assist me; I might be able to return to work. What do you say? If you go forth and kill 100 Golems, I shall reward you greatly!!
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Consider it done, good man.</span> 
+                        <br>
+                        <span class="light-red">Zack Juiluin:</span> What's that? You will? Thank Arna for answering my prayers! 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Struggling</span><span class="orange">, Kill 100 Golems east of Arda, along the mountainside.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Golem.png" alt="Golem" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Golem_Stats.png' alt='Golem Stats'>">
+                      <img src="Images/HighLands/Hooky_Arda_Pond.png" alt="Arda Pond Map" height="300px" width="300px">
+                      <br>
+                     Head east to the mountain range to find the <span class="red">Golems</span>. You will need to kill them with in the location to count as a kill for Zack Juiluin. 
+                     You will be updated as you kill them; <span class="green">You have killed 100 Golems for Zack Juiluin.</span> When you have killed all 100 you will be updated to return to Zack Juiluin.                     
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Struggling</span><span class="orange">, Return to Zack Juiluin in Arda.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Zack Juiluin:</span> You have done it! I promised a reward. Please, accept this piece of armor. I find that it attracts golems... 
+                      <br>
+                    </p>
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Plate of the Golem </span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">64,680</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>  
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You fullfilled the contract for Zack Juiluin
+                  </div>
+                </div>
+              </div>
+              <!-- End of Struggling -->
               
 
               
