Fixed Russel Pkeman Link

--- a/highlands.html
+++ b/highlands.html
@@ -1131,7 +1131,7 @@
                     <img class="npc-img" src="Images/HighLands/Struggling_Zack_Juiluin.png" alt="Zack Juiluin">  
                   </div>
                   <div>
-                    <p><a href="#friendOfTheEarth"><span class="num-color-teal">4.</span> Russel Pikeman</a></p>
+                    <p><a href="#valekarsFortress"><span class="num-color-teal">4.</span> Russel Pikeman</a></p>
                     <img class="npc-img" src="Images/HighLands/Valekars_Fortress_Russel_Pikeman.png" alt="Russel Pikeman">  
                   </div>
                 </div> 
