--- a/quest.html
+++ b/quest.html
@@ -173,7 +173,7 @@
             <div class="space"></div>
 
             <h3 id="darkwoods" class="anchor">Darkwoods</h3>
-            <p>Darkwoods is the home of the Night Elves! These quest are for the towns of Autumn and the Hunting Lodge.</p>
+            <p>Darkwoods is the home of the Night Elves! These quest are for the towns of Whisperdale, Autumn and the Hunting Lodge.</p>
             <button type="button" class="btn btn-dark"><a href="darkWoods.html">Darkwoods</a></button>
             <div class="line"></div>
 
@@ -192,7 +192,8 @@
 
             <div class="space"></div>
             <h3 id="highlands" class="anchor">Highlands</h3>
-            <p>Comeing Soon</p>
+            <h6>Towns</h6>
+            <p>Arda, Dawat, Grell, Parian</p>
             <button type="button" class="btn btn-dark"><a href="highlands.html">Highlands</a></button>
 
             <div class="line"></div>
